# nasdaq-etf-monitor

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: afternoon_brief.yml  econ_release_alert.yml  morning_snapshot.yml  yield_alert.yml
docs/: github-repo-info.md  nasdaq_prediction_model.md
scripts/: install_market_task.ps1  run_futures_trend_snapshot.ps1  run_monitor_session.ps1  start_monitor_now.ps1  stop_monitor.ps1
src/fund_monitor/: __init__.py  config.py  econ_calendar.py  main.py  models.py  news.py  notify.py  providers.py  rules.py  scoring.py  state.py
storage/: state.json
tests/: test_main.py  test_providers.py  test_rules.py  test_scoring.py
