[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-monitor"
version = "0.1.0"
description = "Semi-automatic Nasdaq ETF monitor with email alerts."
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.18.63",
  "requests>=2.31.0"
]

[project.scripts]
fund-monitor = "fund_monitor.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
